{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 96,
  "lineage": "4b2f9812-c23a-f046-81e2-6387989a6fef",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_back_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03c89b290c1f0cf4e",
            "arn": "arn:aws:ec2:us-east-1:910148268074:instance/i-00547d818deff1b44",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00547d818deff1b44",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b9a561707e8ec036"
              }
            ],
            "primary_network_interface_id": "eni-0b9a561707e8ec036",
            "private_dns": "ip-10-0-1-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c73a652227e55385",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d979a62d2b382f18",
            "tags": {
              "Name": "Back 1 instance"
            },
            "tags_all": {
              "Name": "Back 1 instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00379decfad8c5dc1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "i-00547d818deff1b44",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.instances.aws_security_group.back_instances_sg",
            "module.instances.data.aws_ami.ubuntu_ami",
            "module.lbs.aws_security_group.back_lb_sg",
            "module.network.aws_subnet.pri_subnet_1",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_back_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03c89b290c1f0cf4e",
            "arn": "arn:aws:ec2:us-east-1:910148268074:instance/i-07d77e7322523e234",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d77e7322523e234",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06beaf59a6cbf61bc"
              }
            ],
            "primary_network_interface_id": "eni-06beaf59a6cbf61bc",
            "private_dns": "ip-10-0-3-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.207",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-066acc93ad886b2d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01136f388ed2aca1e",
            "tags": {
              "Name": "Back 2 instance"
            },
            "tags_all": {
              "Name": "Back 2 instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00379decfad8c5dc1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "i-07d77e7322523e234",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.instances.aws_security_group.back_instances_sg",
            "module.instances.data.aws_ami.ubuntu_ami",
            "module.lbs.aws_security_group.back_lb_sg",
            "module.network.aws_subnet.pri_subnet_2",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_proxy_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03c89b290c1f0cf4e",
            "arn": "arn:aws:ec2:us-east-1:910148268074:instance/i-008713cdbc904e046",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008713cdbc904e046",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01886dc134f98a687"
              }
            ],
            "primary_network_interface_id": "eni-01886dc134f98a687",
            "private_dns": "ip-10-0-0-85.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.85",
            "public_dns": "ec2-3-89-215-80.compute-1.amazonaws.com",
            "public_ip": "3.89.215.80",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-027b5d74d952116db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5a50775edfc41fc",
            "tags": {
              "Name": "Proxy 1 instance"
            },
            "tags_all": {
              "Name": "Proxy 1 instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-060042183d776311c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "i-008713cdbc904e046",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.instances.aws_security_group.proxy_instances_sg",
            "module.instances.data.aws_ami.ubuntu_ami",
            "module.lbs.aws_lb.back_lb",
            "module.lbs.aws_security_group.back_lb_sg",
            "module.lbs.aws_security_group.front_lb_sg",
            "module.network.aws_subnet.pri_subnet_1",
            "module.network.aws_subnet.pri_subnet_2",
            "module.network.aws_subnet.pub_subnet_1",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_proxy_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03c89b290c1f0cf4e",
            "arn": "arn:aws:ec2:us-east-1:910148268074:instance/i-05c3e2174f7f61077",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c3e2174f7f61077",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cbfd978311ff904e"
              }
            ],
            "primary_network_interface_id": "eni-0cbfd978311ff904e",
            "private_dns": "ip-10-0-2-206.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.206",
            "public_dns": "ec2-100-27-204-190.compute-1.amazonaws.com",
            "public_ip": "100.27.204.190",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f961ba3eddb4985",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008b02366099a6c13",
            "tags": {
              "Name": "Proxy 2 instance"
            },
            "tags_all": {
              "Name": "Proxy 2 instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-060042183d776311c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "i-05c3e2174f7f61077",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.instances.aws_security_group.proxy_instances_sg",
            "module.instances.data.aws_ami.ubuntu_ami",
            "module.lbs.aws_lb.back_lb",
            "module.lbs.aws_security_group.back_lb_sg",
            "module.lbs.aws_security_group.front_lb_sg",
            "module.network.aws_subnet.pri_subnet_1",
            "module.network.aws_subnet.pri_subnet_2",
            "module.network.aws_subnet.pub_subnet_2",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "back_instances_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:security-group/sg-00379decfad8c5dc1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00379decfad8c5dc1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077a914bf9efc7b78"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250921154033257500000001",
            "name_prefix": "terraform-",
            "owner_id": "910148268074",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-093d3fbb4e289dfc4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "sg-00379decfad8c5dc1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.lbs.aws_security_group.back_lb_sg",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proxy_instances_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:security-group/sg-060042183d776311c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060042183d776311c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002a19ba239b53574"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250921151610860000000003",
            "name_prefix": "terraform-",
            "owner_id": "910148268074",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-093d3fbb4e289dfc4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "sg-060042183d776311c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.lbs.aws_security_group.front_lb_sg",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lbs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "back_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/back-load-balancer/669cd323eea8fd46",
            "arn_suffix": "app/back-load-balancer/669cd323eea8fd46",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-back-load-balancer-378033254.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/back-load-balancer/669cd323eea8fd46",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "back-load-balancer",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-077a914bf9efc7b78"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01136f388ed2aca1e"
              },
              {
                "subnet_id": "subnet-0d979a62d2b382f18"
              }
            ],
            "subnets": [
              "subnet-01136f388ed2aca1e",
              "subnet-0d979a62d2b382f18"
            ],
            "tags": {
              "Name": "Back Load Balancer"
            },
            "tags_all": {
              "Name": "Back Load Balancer"
            },
            "vpc_id": "vpc-093d3fbb4e289dfc4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/back-load-balancer/669cd323eea8fd46"
          },
          "dependencies": [
            "module.lbs.aws_security_group.back_lb_sg",
            "module.network.aws_subnet.pri_subnet_1",
            "module.network.aws_subnet.pri_subnet_2",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lbs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/front-load-balancer/63c809f1a589c017",
            "arn_suffix": "app/front-load-balancer/63c809f1a589c017",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-load-balancer-1666408659.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/front-load-balancer/63c809f1a589c017",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front-load-balancer",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-002a19ba239b53574"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-008b02366099a6c13"
              },
              {
                "subnet_id": "subnet-0b5a50775edfc41fc"
              }
            ],
            "subnets": [
              "subnet-008b02366099a6c13",
              "subnet-0b5a50775edfc41fc"
            ],
            "tags": {
              "Name": "Front Load Balancer"
            },
            "tags_all": {
              "Name": "Front Load Balancer"
            },
            "vpc_id": "vpc-093d3fbb4e289dfc4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/front-load-balancer/63c809f1a589c017"
          },
          "dependencies": [
            "module.lbs.aws_security_group.front_lb_sg",
            "module.network.aws_subnet.pub_subnet_1",
            "module.network.aws_subnet.pub_subnet_2",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lbs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:listener/app/back-load-balancer/669cd323eea8fd46/a9cc9e48e5321710",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/back-target-group/f331d4a5ea2040a6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:910148268074:listener/app/back-load-balancer/669cd323eea8fd46/a9cc9e48e5321710",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/back-load-balancer/669cd323eea8fd46",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:listener/app/back-load-balancer/669cd323eea8fd46/a9cc9e48e5321710"
          },
          "dependencies": [
            "module.lbs.aws_lb.back_lb",
            "module.lbs.aws_lb_target_group.back_target_group",
            "module.lbs.aws_security_group.back_lb_sg",
            "module.network.aws_subnet.pri_subnet_1",
            "module.network.aws_subnet.pri_subnet_2",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lbs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:listener/app/front-load-balancer/63c809f1a589c017/3aa3ad9f01411f14",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/proxy-target-group/bffefb6069cc5a4d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:910148268074:listener/app/front-load-balancer/63c809f1a589c017/3aa3ad9f01411f14",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/front-load-balancer/63c809f1a589c017",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:listener/app/front-load-balancer/63c809f1a589c017/3aa3ad9f01411f14"
          },
          "dependencies": [
            "module.lbs.aws_lb.front_lb",
            "module.lbs.aws_lb_target_group.proxy_target_group",
            "module.lbs.aws_security_group.front_lb_sg",
            "module.network.aws_subnet.pub_subnet_1",
            "module.network.aws_subnet.pub_subnet_2",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lbs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/back-target-group/f331d4a5ea2040a6",
            "arn_suffix": "targetgroup/back-target-group/f331d4a5ea2040a6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/back-target-group/f331d4a5ea2040a6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "back-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-093d3fbb4e289dfc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/back-target-group/f331d4a5ea2040a6"
          },
          "dependencies": [
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lbs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "proxy_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/proxy-target-group/bffefb6069cc5a4d",
            "arn_suffix": "targetgroup/proxy-target-group/bffefb6069cc5a4d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/proxy-target-group/bffefb6069cc5a4d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/front-load-balancer/63c809f1a589c017"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "proxy-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-093d3fbb4e289dfc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/proxy-target-group/bffefb6069cc5a4d"
          },
          "dependencies": [
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lbs",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "back_tg_attach_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/back-target-group/f331d4a5ea2040a6-20250921154051949800000004",
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/back-target-group/f331d4a5ea2040a6",
            "target_id": "i-00547d818deff1b44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.instances.aws_instance.instance_back_1",
            "module.instances.aws_security_group.back_instances_sg",
            "module.instances.data.aws_ami.ubuntu_ami",
            "module.lbs.aws_lb_target_group.back_target_group",
            "module.lbs.aws_security_group.back_lb_sg",
            "module.network.aws_subnet.pri_subnet_1",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lbs",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "back_tg_attach_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/back-target-group/f331d4a5ea2040a6-20250921154052378900000005",
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/back-target-group/f331d4a5ea2040a6",
            "target_id": "i-07d77e7322523e234"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.instances.aws_instance.instance_back_2",
            "module.instances.aws_security_group.back_instances_sg",
            "module.instances.data.aws_ami.ubuntu_ami",
            "module.lbs.aws_lb_target_group.back_target_group",
            "module.lbs.aws_security_group.back_lb_sg",
            "module.network.aws_subnet.pri_subnet_2",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lbs",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "proxy_tg_attach_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/proxy-target-group/bffefb6069cc5a4d-20250921154356370000000008",
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/proxy-target-group/bffefb6069cc5a4d",
            "target_id": "i-008713cdbc904e046"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.instances.aws_instance.instance_proxy_1",
            "module.instances.aws_security_group.proxy_instances_sg",
            "module.instances.data.aws_ami.ubuntu_ami",
            "module.lbs.aws_lb.back_lb",
            "module.lbs.aws_lb_target_group.proxy_target_group",
            "module.lbs.aws_security_group.back_lb_sg",
            "module.lbs.aws_security_group.front_lb_sg",
            "module.network.aws_subnet.pri_subnet_1",
            "module.network.aws_subnet.pri_subnet_2",
            "module.network.aws_subnet.pub_subnet_1",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lbs",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "proxy_tg_attach_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/proxy-target-group/bffefb6069cc5a4d-20250921154356656700000009",
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/proxy-target-group/bffefb6069cc5a4d",
            "target_id": "i-05c3e2174f7f61077"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.instances.aws_instance.instance_proxy_2",
            "module.instances.aws_security_group.proxy_instances_sg",
            "module.instances.data.aws_ami.ubuntu_ami",
            "module.lbs.aws_lb.back_lb",
            "module.lbs.aws_lb_target_group.proxy_target_group",
            "module.lbs.aws_security_group.back_lb_sg",
            "module.lbs.aws_security_group.front_lb_sg",
            "module.network.aws_subnet.pri_subnet_1",
            "module.network.aws_subnet.pri_subnet_2",
            "module.network.aws_subnet.pub_subnet_2",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lbs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "back_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:security-group/sg-077a914bf9efc7b78",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077a914bf9efc7b78",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "back-lb-sg",
            "name_prefix": "",
            "owner_id": "910148268074",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-093d3fbb4e289dfc4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "sg-077a914bf9efc7b78",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lbs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:security-group/sg-002a19ba239b53574",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002a19ba239b53574",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "front-lb-sg",
            "name_prefix": "",
            "owner_id": "910148268074",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-093d3fbb4e289dfc4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "sg-002a19ba239b53574",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iti-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:internet-gateway/igw-0bbeec5bf71dc081d",
            "id": "igw-0bbeec5bf71dc081d",
            "owner_id": "910148268074",
            "region": "us-east-1",
            "tags": {
              "Name": "iti-igw"
            },
            "tags_all": {
              "Name": "iti-igw"
            },
            "vpc_id": "vpc-093d3fbb4e289dfc4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:route-table/rtb-0a0dcbdb576af8e8f",
            "id": "rtb-0a0dcbdb576af8e8f",
            "owner_id": "910148268074",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-093d3fbb4e289dfc4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "rtb-0a0dcbdb576af8e8f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:route-table/rtb-07a6501eb92d25ab7",
            "id": "rtb-07a6501eb92d25ab7",
            "owner_id": "910148268074",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bbeec5bf71dc081d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-093d3fbb4e289dfc4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "rtb-07a6501eb92d25ab7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.iti-igw",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09782954dc40577cc",
            "region": "us-east-1",
            "route_table_id": "rtb-0a0dcbdb576af8e8f",
            "subnet_id": "subnet-0d979a62d2b382f18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.pri_route_table",
            "module.network.aws_subnet.pri_subnet_1",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06470a719d65c0e4b",
            "region": "us-east-1",
            "route_table_id": "rtb-0a0dcbdb576af8e8f",
            "subnet_id": "subnet-01136f388ed2aca1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.pri_route_table",
            "module.network.aws_subnet.pri_subnet_2",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0165a4a3099af134e",
            "region": "us-east-1",
            "route_table_id": "rtb-07a6501eb92d25ab7",
            "subnet_id": "subnet-0b5a50775edfc41fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.iti-igw",
            "module.network.aws_route_table.pub_route_table",
            "module.network.aws_subnet.pub_subnet_1",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02daad41a44d602d7",
            "region": "us-east-1",
            "route_table_id": "rtb-07a6501eb92d25ab7",
            "subnet_id": "subnet-008b02366099a6c13"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.iti-igw",
            "module.network.aws_route_table.pub_route_table",
            "module.network.aws_subnet.pub_subnet_2",
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:subnet/subnet-0d979a62d2b382f18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d979a62d2b382f18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "910148268074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-093d3fbb4e289dfc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "subnet-0d979a62d2b382f18",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:subnet/subnet-01136f388ed2aca1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01136f388ed2aca1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "910148268074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-093d3fbb4e289dfc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "subnet-01136f388ed2aca1e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:subnet/subnet-0b5a50775edfc41fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5a50775edfc41fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "910148268074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-093d3fbb4e289dfc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "subnet-0b5a50775edfc41fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:subnet/subnet-008b02366099a6c13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008b02366099a6c13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "910148268074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-093d3fbb4e289dfc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "subnet-008b02366099a6c13",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iti-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:vpc/vpc-093d3fbb4e289dfc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa1f819093135d8f",
            "default_route_table_id": "rtb-0ed4a073e4d90e00f",
            "default_security_group_id": "sg-05f72f02304024f6b",
            "dhcp_options_id": "dopt-04ab5c2c56c7ca01b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093d3fbb4e289dfc4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed4a073e4d90e00f",
            "owner_id": "910148268074",
            "region": "us-east-1",
            "tags": {
              "Name": "iti-vpc"
            },
            "tags_all": {
              "Name": "iti-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}